--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport"
-		  content="initial-scale=1.0">
+		  content="initial-scale=1.0, max-scale=1.0">
 	<meta name="viewport"
 		  content="width=320.1">
 	<link rel="stylesheet" href="css/style.css">
