--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
 	<!-- / Page -->
 	
 	<!-- Scripts -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 	<script src="js/svgicons-config.js"></script>
 	<script src="js/svgicons.js"></script>
 	
