--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; user-scalable=0">
 	<meta name="viewport" content="width=320.1">
 	<link rel="stylesheet" href="css/style.css">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	
 	<title>Navigation experiments</title>
