--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 	<title>Navigation experiments</title>
 	
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css?v1">
 	
 	<!-- Head scripts -->
 	<script src="js/snap.svg-min.js"></script>
