--- a/home.html
+++ b/home.html
@@ -2,14 +2,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=320.1, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="stylesheet" href="css/style.css">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	
 	<title>Navigation experiments</title>
 	
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/style.css?v1">
+	<link rel="stylesheet" href="css/style.css?20">
 	
 	<!-- Head scripts -->
 	<script src="js/snap.svg-min.js"></script>
