--- a/home.html
+++ b/home.html
@@ -8,10 +8,10 @@
 	<title>Navigation experiments</title>
 	
 	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/style.css?20">
+	<link rel="stylesheet" href="css/style.css?42">
 	
 	<!-- Head scripts -->
-	<script src="js/snap.svg-min.js"></script>
+	<script src="js/snap.svg-min.js?42"></script>
 	
 </head>
 <body>
@@ -67,9 +67,9 @@
 	
 	<!-- Scripts -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-	<script src="js/svgicons-config.js"></script>
-	<script src="js/svgicons.js"></script>
-	<script src="js/hammer.js"></script>
+	<script src="js/svgicons-config.js?42"></script>
+	<script src="js/svgicons.js?42"></script>
+	<script src="js/hammer.js?42"></script>
 	
 	<script>
 		
