--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
 		<!-- / Page content -->
 		
 		<!-- Navigation button -->
-		<span class="showNavigation si-icon-reverse" data-icon-name="maximizeRotate"></span>
+		<span class="showNavigation" data-icon-name="hamburgerCross"></span>
 		
 	</div>
 	<!-- / Page -->
